index.css
@font-face {
    font-family: hand-written;
    src: url("ShantellSans-VariableFont_BNCE,INFM,SPAC,wght.ttf");
}

html {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    margin: 0px;
    width: 100%;
    height: 100%;
    overflow: hidden;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #fbefee;

    background-image: url("Syyskonsertti-BG.webp");
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    background-repeat: no-repeat;
}

@media screen and (orientation: landscape) {
    .main {
        overflow: auto;
    }
    /*
    img {
        width: 100px;
        height: auto;
    }
    */
}

.backdrop-filter {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    
    backdrop-filter: blur(10px) brightness(60%);
    -webkit-backdrop-filter: blur(10px) brightness(60%);
    position: fixed;
}

.main {
    margin: 0px;
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;

    overflow-x: hidden;
    overflow-y: auto;
}

img {
    width: 300px;
    height: auto;
    filter: hue-rotate(320deg) brightness(110%) saturate(120%) drop-shadow(0 0 40px rgba(255, 191, 242, 0.368));
    -webkit-filter: hue-rotate(320deg) brightness(110%) saturate(120%) drop-shadow(0 0 40px rgba(255, 191, 242, 0.368));
}

h1 {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0px;
    margin-bottom: 10px;
    width: fit-content;
    height: auto;

    text-shadow: 0 0 30px rgba(177, 224, 255, 0.131);
}

h3 {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0px;
    padding: 16px;
    width: fit-content;
    height: auto;
    font-size: x-large;

    text-shadow: 0 0 20px rgba(177, 224, 255, 0.069);
}

p {
    margin: 0px;
    width: fit-content;
    height: auto;
    text-shadow: 0 0 20px rgba(11, 13, 15, 0.5);
}

button {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    width: 240px;
    margin: 10px;
    padding: 12.5px 30px;
    border: 0px;
    border-radius: 12.5px;
    background-color: #5196ae;
    box-shadow: 0 0 20px rgba(177, 224, 255, 0.108);
    color: #fbefee;
    font-size: x-large;
    font-weight: Bold;
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
}
  
button:hover {
    background-color: #6fc5ff;
    box-shadow: 0 0 20px #6fc5ff36;
    transform: scale(1.02);
}
  
button:active {
    background-color: #3d95cf9c;
    transition: all 0.25s;
    -webkit-transition: all 0.25s;
    box-shadow: none;
    transform: scale(0.98);
}

.button-red {
    background-color: #ad4c4c;
    box-shadow: 0 0 20px #d4515e24;
}

.button-red:hover {
    background-color: #ba5b5b;
    box-shadow: 0 0 20px #d4515e49;
}

.button-red:active {
    background-color: #a24e4ee0;
    box-shadow: 0 0 20px #d4515e49;
}

.button-bigger {
    padding: 12.5px 60px;
}

ul {
    margin: 0px;
    width: fit-content;
    height: auto;
    list-style-type: none;
    padding-left: 0px;
    
    display: flex;
    flex-direction: column;
    align-items: center;
}

li {
    margin: 0px;
    width: fit-content;
    height: auto;
    font-size: 18px;
    padding: 8px;

    text-shadow: 0 0 20px rgba(11, 13, 15, 0.5);
}

/*------------*/
/* index.html */
/*------------*/

.main-header {
    margin: 0px;
    font-size: 40px;
}

#main-page {
    display: flex;
    align-items: center;
    justify-content: center;
}

#main-header-block {
    width: 100vw;
    height: fit-content;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/*-------------------*/
/* content_page.html */
/*-------------------*/

#ohjelma-header {
    margin-top: 10px;
    padding: 6px;
}

.ohjelma-container {
    margin: 0px;
    width: 100vw;
    height: auto;
    padding-bottom: 8px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.soittajat-li {
    padding: 0;
    padding-bottom: 8px;
}

.soittajat-container {
    font-size: 14px;
    color: #d9cccbc8;
    
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/*-------------------*/
/* warning_page.html */
/*-------------------*/

#warn-header {
    padding-bottom: 8px;
}

.warn-text {
    font-size: 22px;
    width: 80vw;
    text-align: center;
}

#warn-box {
    height: 100vh;
    width: fit-content;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

